feat: add media queries for portfolio, about-as, get-a-quote sections, footer

--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -38,6 +38,8 @@
 // Content width
   $content-width: 1020px;
   $content-width-tablet: 768px;
+  $content-width-mobile-landscape: 640px;
+  $content-width-mobile-landscape-small: 568px;
   $content-width-mobile: 375px;
   $content-width-mobile-small: 320px;
 
