--- a/sass/components/_slider-button.scss
+++ b/sass/components/_slider-button.scss
@@ -56,9 +56,11 @@ $slider-btn-height: 100px;
     }
   }
 
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.25);
-    outline: none;
+  @include media-hover {
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.25);
+      outline: none;
+    }
   }
   
   &:active {
