--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,12 +1,14 @@
 
 .form {
-  width: 38.6875em;
+  flex-basis: calc( 619 / 940 * 100%);
+  flex-shrink: 1;
   display: flex;
   flex-direction: column;
   position: relative;
 }
 
 .form__input {
+  width: 100%;
   padding: 0.66667em 1.25em;
   border-radius: 5px;
   border: none;
@@ -16,10 +18,6 @@
   overflow: hidden;
   @extend %transition-bgColor-color-400-linear;
 
-  & + & {
-    margin-top: 1rem;
-  }
-
   &::-ms-input-placeholder {
     color: inherit;
   }
@@ -28,8 +26,10 @@
     color: inherit;
   }
   
-  &:hover {
-    background-color: #ad423d;
+  @include media-hover {
+    &:hover {
+      background-color: #ad423d;
+    }
   }
   
   &:focus {
@@ -48,6 +48,19 @@
     padding: calc(0.66667em - 2px) calc(1.25em - 2px);
     border: 2px solid red;
     outline: none;
+  }
+}
+
+.form__input + .form__input {
+  margin-top: 16px;
+
+  @include media-laptop {
+    $ratio: calc( ( 16 - 12 ) / ( 1020 - 768 ) );
+    margin-top: calc( 16px - ( 1020px - 100vw ) * #{$ratio});
+  }
+
+  @include media-tablet {
+    margin-top: 12px;
   }
 }
 
@@ -80,7 +93,7 @@
 }
 
 .form__submit {
-  padding: 0.55em 5em;
+  padding: 0.785em 4em;
   flex-grow: 0;
   width: max-content;
   border: 1px solid transparent;
@@ -91,14 +104,20 @@
   cursor: pointer;
   @extend %transition-all-400-linear;
 
+  @include media-mobile-landscape {
+    width: 100%;
+  }
+
   &:active {
     border-color: $color-quote-title;
     outline: none;
   }
   
-  &:hover {
-    color: $color-quote-title;
-    background-color: $color-footer-background;
-    outline: none;
+  @include media-hover {
+    &:hover {
+      color: $color-quote-title;
+      background-color: $color-footer-background;
+      outline: none;
+    }
   }
 }
