--- a/sass/components/_get-a-quote.scss
+++ b/sass/components/_get-a-quote.scss
@@ -1,9 +1,31 @@
 
 .quote {
-  padding: 3.85em 0 1.2em 0;
+  padding: 59px 0 58px 0;
   background-color: $color-quote-background;
   border-bottom: 6px solid $color-quote-border;
-  scroll-margin-top: $header-height;
+  scroll-margin-top: calc( #{$header-height} - 5px );
+
+  @include media-laptop {
+    $ratio-padding-top: calc(( 59 - 53 ) / ( 1020 - 768 ));
+    $ratio-padding-bottom: calc(( 58 - 39 ) / ( 1020 - 768 ));
+
+    padding-top: calc( 59px - ( 1020px - 100vw ) * #{$ratio-padding-top} );
+    padding-bottom: calc( 58px - ( 1020px - 100vw ) * #{$ratio-padding-top} );
+  }
+
+  @include media-tablet {
+    $ratio-padding-top: calc(( 53 - 44 ) / ( 768 - 640 ));
+    $ratio-padding-bottom: calc(( 39 - 36 ) / ( 768 - 640 ));
+
+    padding-top: calc( 53px - ( 768px - 100vw ) * #{$ratio-padding-top} );
+    padding-bottom: calc( 39px - ( 768px - 100vw ) * #{$ratio-padding-bottom} );
+  }
+
+  @include media-mobile-landscape {
+    padding-top: 44px;
+    padding-bottom: 36px;
+    border-bottom-color: $color-quote-background;
+  }
 }
 
 .quote__title {
@@ -16,7 +38,7 @@
 }
 
 .quote__text {
-  margin-top: 1.175em;
+  margin-top: 1.0083em;
   @include font ($size: 1.125rem, $height: 1.67, $weight: 300);
   color: $color-quote-text;
 }
@@ -25,4 +47,8 @@
   margin-top: 2.75em;
   display: flex;
   justify-content: space-between;
+
+  @include media-mobile-landscape {
+    flex-direction: column;
+  }
 }
