--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,9 +1,23 @@
 
 .portfolio {
-  padding: 3.89em 0 calc(4.1875em - 5px) 0;
+  padding: 59px 0 calc(67px - 5px) 0;
   background-color: $color-portfolio-background;
   border-bottom: 6px solid $color-portfolio-border;
-  scroll-margin-top: $header-height;
+  scroll-margin-top: calc( #{$header-height} - 5px );
+
+  @include media-tablet {
+    $ratio-padding-top: calc(( 59 - 42 ) / ( 768 - 640 ));
+    $ratio-padding-bottom: calc(( 62 - 31 ) / ( 768 - 640 ));
+
+    padding-top: calc( 59px - ( 768px - 100vw ) * #{$ratio-padding-top} );
+    padding-bottom: calc( 62px - ( 768px - 100vw ) * #{$ratio-padding-bottom} );
+  }
+
+  @include media-mobile-landscape {
+    padding-top: 42px;
+    padding-bottom: 31px;
+    border-bottom-color: $color-portfolio-background;
+  }
 }
 
 .portfolio__title {
@@ -12,28 +26,40 @@
 }
 
 .portfolio__text {
-  margin-top: 1.15em;
+  margin-top: 0.9833em;
   @include font ($size: 1.125rem, $height: 1.67, $weight: 300);
   color: $color-portfolio-text;
 }
 
 .portfolio__tabs {
-  margin-top: 0.7em;
+  margin-top: 11.2px;
 
-  &.pixel-perfect {
-    padding-left: 1px;
+  @include media-laptop {
+    $ratio-margin-top: calc(( 15 - 11.2 ) / ( 1020 - 768 ));
+    margin-top: calc( 11.2px + ( 1020px - 100vw ) * #{$ratio-margin-top} );
+  }
+
+  @include media-tablet {
+    margin-top: 15px;
   }
 }
 
 .tabs-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .tabs-list__item {
   margin-right: 0.625em;
+  
+  @include media-mobile {
+    margin-right: 0.5em;
+    margin-bottom: 0.25em;
+  }
 }
 
 .portfolio-tab {
+  height: 100%;
   padding: 0.33333em 0.5em;
   display: flex;
   align-items: center;
@@ -43,16 +69,24 @@
   color: $color-portfolio-text;
   word-spacing: 0.01em;
   letter-spacing: -0.0007em;
+  white-space: nowrap;
   @extend %transition-all-150-linear;
+
+  @include media-mobile {
+    padding: 0.75em 0.375em;
+    @include font ($size: 0.7rem, $height: 1, $weight: 400);
+  }
 
   &:focus {
     outline: 1px solid $color-outline;
     outline-offset: 1px;
   }
   
-  &:hover {
-    border-color: #c5c5c5;
-    outline: none;
+  @include media-hover {
+    &:hover {
+      border-color: #c5c5c5;
+      outline: none;
+    }
   }
   
   &:active {
@@ -72,13 +106,21 @@
 }
 
 .portfolio__images {
-  margin-top: calc(1.1875em - 5px);
+  margin-top: calc(19px - 5px);
   margin-left: -5px;
   margin-right: -5px;
+
+  @include media-laptop {
+    $ratio-margin-top: calc(( 20 - 14 ) / ( 1020 - 768 ));
+    margin-top: calc( 14px + ( 1020px - 100vw ) * #{$ratio-margin-top} );
+  }
+
+  @include media-tablet {
+    margin-top: 20px;
+  }
 }
 
 .images-list {
-  max-height: 611px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -86,23 +128,44 @@
   row-gap: calc(1.25em - 10px);
   overflow: hidden;
   user-select: none;
+
+  @include media-laptop {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+
+  @include media-tablet {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    column-gap: calc(13px - 10px);
+    row-gap: calc(14px - 10px);
+  }
 }
 
 .images-list__item {
-  height: calc(11.6875em + 10px);
-  width: calc(13.75em + 10px);
   border: 5px solid transparent;
-  overflow: hidden;
+
+  &:nth-child(n + 13) {
+    display: none;
+  }
+
+  @include media-tablet {
+    &:nth-child(n + 9) {
+      display: none;
+    }
+  }
 
   &:focus {
     outline: 1px solid $color-outline;
     outline-offset: -1px;
   }
   
-  &:hover {
-    outline: 1px solid $color-slider-background;
-    outline-offset: -1px;
-    transition: outline 0.4s linear;
+  @include media-hover {
+    &:hover {
+      outline: 1px solid $color-slider-background;
+      outline-offset: -1px;
+      transition: outline 0.4s linear;
+    }
   }
   
   &:active,
@@ -115,55 +178,7 @@
 
 .portfolio__img {
   display: block;
+  width: 100%;
   height: auto;
-  object-fit: fill;
-
-  &--01 {
-    object-position: -0.5em -0.69em;
-  }
-  
-  &--02 {
-    object-position: -5.13em -2.69em;
-  }
-  
-  &--03 {
-    object-position: -0.69em -0.063em;
-  }
-  
-  &--04 {
-    object-position: -1.5em -0.13em;
-  }
-  
-  &--05 {
-    object-position: -0.628em -1em;
-  }
-  
-  &--06 {
-    object-position: -1em -0.25em;
-  }
-  
-  &--07 {
-    object-position: -1.94em -2.44em;
-  }
-  
-  &--08 {
-    object-position: -1.5em -2.0em;
-  }
-  
-  &--09 {
-    object-position: -1em -0.128em;
-  }
-  
-  &--10 {
-    object-position: -8.816em -7.066em;
-  }
-  
-  &--11 {
-    object-position: -9.0em -10.94em;
-  }
-  
-  &--12 {
-    object-position: -2.25em -3.75em;
-  }
 }
 
