--- a/sass/components/_get-a-quote.scss
+++ b/sass/components/_get-a-quote.scss
@@ -25,6 +25,7 @@
     padding-top: 44px;
     padding-bottom: 36px;
     border-bottom-color: $color-quote-background;
+    scroll-margin-top: calc( #{$header-height-mobile} - 5px );
   }
 }
 
