--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -17,6 +17,7 @@
     padding-top: 42px;
     padding-bottom: 31px;
     border-bottom-color: $color-portfolio-background;
+    scroll-margin-top: calc( #{$header-height-mobile} - 5px );
   }
 }
 
