--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Lato", Verdana, sans-serif;
 }
 
-.social-link:active, .portfolio-tab {
+.social-link:active, .portfolio-tab, .hamburger {
   transition: all 0.15s linear;
 }
 
@@ -64,11 +64,8 @@ body {
 h1 {
   margin: 0;
   padding: 0;
-  font-size: 1.5625rem;
-  line-height: 1;
-  font-weight: 700;
-  font-style: normal;
-  text-transform: uppercase;
+  font-size: 0;
+  line-height: 0;
 }
 
 h2 {
@@ -150,10 +147,20 @@ img {
 }
 
 .logo {
-  display: block;
+  display: inline-block;
   position: relative;
+  font-size: 1.5625rem;
+  line-height: 1;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: uppercase;
   color: #fff;
   letter-spacing: -0.02em;
+}
+@media (max-width: calc(640px - 1px)) {
+  .logo {
+    font-size: 20px;
+  }
 }
 .logo::after {
   content: "*";
@@ -170,6 +177,50 @@ img {
   font-style: normal;
   color: #666d89;
   letter-spacing: -0.005em;
+}
+
+.hamburger__line, .hamburger::after, .hamburger::before {
+  display: inline-block;
+  width: 100%;
+  height: 2.4px;
+  border-radius: 1.2px;
+  background-color: #ffffff;
+}
+
+.hamburger {
+  position: relative;
+  width: 25px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+.hamburger::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.hamburger::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.hamburger:focus {
+  outline: 1px solid #FBC65F;
+  outline-offset: 2px;
+}
+@media (hover: hover) {
+  .hamburger:hover {
+    outline: none;
+  }
+  .hamburger:hover > .hamburger__line, .hamburger:hover::before, .hamburger:hover::after {
+    background-color: #FBC65F;
+  }
+}
+.hamburger:active, .hamburger--active {
+  transform: rotate(90deg);
+  outline: none;
 }
 
 .wrapper {
@@ -215,6 +266,37 @@ img {
   }
 }
 
+.header__hamburger {
+  display: none;
+  position: absolute;
+  left: 20px;
+  top: 26px;
+  z-index: 80;
+}
+@media (max-width: calc(640px - 1px)) {
+  .header__hamburger {
+    display: flex;
+  }
+}
+
+.header__navbar {
+  display: flex;
+}
+@media (max-width: calc(640px - 1px)) {
+  .header__navbar {
+    display: none;
+  }
+}
+
+.header__side-menu {
+  display: none;
+}
+@media (max-width: calc(640px - 1px)) {
+  .header__side-menu {
+    display: block;
+  }
+}
+
 .footer {
   padding: 1.375em 0 1.375em 0;
   background-color: #2d303a;
@@ -238,13 +320,11 @@ img {
 }
 
 .navbar {
-  display: flex;
   justify-content: space-between;
 }
-@media (max-width: calc(640px - 1px)) {
-  .navbar {
-    display: none;
-  }
+.navbar--aside {
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .navbar__item {
@@ -253,6 +333,16 @@ img {
 }
 .navbar__item:last-child {
   margin-right: -0.75em;
+}
+.navbar__item--aside {
+  margin: 0;
+  margin-bottom: 27px;
+}
+.navbar__item--aside:last-child {
+  margin: 0;
+}
+.navbar__item--aside::before {
+  display: none;
 }
 
 .navbar__item + .navbar__item::before {
@@ -279,6 +369,13 @@ img {
   letter-spacing: -0.0275em;
   user-select: none;
 }
+.navbar__link--aside {
+  padding: 0;
+  font-size: 24px;
+  line-height: 29px;
+  color: #ffffff;
+  letter-spacing: -0.035em;
+}
 @media (hover: hover) {
   .navbar__link:hover {
     color: #969696;
@@ -296,6 +393,32 @@ img {
   }
 }
 
+.side-menu {
+  position: absolute;
+  z-index: 60;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.side-menu__content {
+  position: relative;
+  width: 278px;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  padding: 24px 20px 20px 71px;
+  background: #2d303a;
+  box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
+  z-index: 70;
+}
+
+.side-menu__navbar {
+  margin-top: calc( 28.5vh - 50px);
+}
+
 .slider {
   height: 600px;
   padding: 54px 0 27px 0;
@@ -303,7 +426,7 @@ img {
   background-color: #f06c64;
   border-bottom-style: solid;
   border-bottom-color: #ea676b;
-  scroll-margin-top: calc( calc(2em + 1.5625rem + 2em + 6px) - 5px );
+  scroll-margin-top: calc( 95px - 5px );
 }
 @media (max-width: calc(1020px - 1px)) {
   .slider {
@@ -311,6 +434,11 @@ img {
     padding-top: calc(100vw * 54 / 1020);
     padding-bottom: calc(100vw * 27 / 1020);
     border-bottom-width: calc(100vw * 6 / 1020);
+  }
+}
+@media (max-width: calc(640px - 1px)) {
+  .slider {
+    scroll-margin-top: calc( 71px - 5px );
   }
 }
 
@@ -588,7 +716,7 @@ img {
   padding: 3.7125em 0 1.875em 0;
   background-color: #f2f2f2;
   border-bottom: 6px solid #fff;
-  scroll-margin-top: calc( calc(2em + 1.5625rem + 2em + 6px) - 5px );
+  scroll-margin-top: calc( 95px - 5px );
 }
 @media (max-width: calc(1020px - 1px)) {
   .services {
@@ -607,6 +735,7 @@ img {
     padding-top: 25.41px;
     padding-bottom: 0;
     border-bottom-color: #f2f2f2;
+    scroll-margin-top: calc( 71px - 5px );
   }
 }
 
@@ -717,7 +846,7 @@ img {
   padding: 59px 0 calc(67px - 5px) 0;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
-  scroll-margin-top: calc( calc(2em + 1.5625rem + 2em + 6px) - 5px );
+  scroll-margin-top: calc( 95px - 5px );
 }
 @media (max-width: calc(768px - 1px)) {
   .portfolio {
@@ -730,6 +859,7 @@ img {
     padding-top: 42px;
     padding-bottom: 31px;
     border-bottom-color: #2d303a;
+    scroll-margin-top: calc( 71px - 5px );
   }
 }
 
@@ -950,7 +1080,7 @@ img {
   padding: 59px 0 68px 0;
   background-color: #f2f2f2;
   border-bottom: 6px solid #fff;
-  scroll-margin-top: calc( calc(2em + 1.5625rem + 2em + 6px) - 5px );
+  scroll-margin-top: calc( 95px - 5px );
 }
 @media (max-width: calc(1020px - 1px)) {
   .about-us {
@@ -968,6 +1098,7 @@ img {
     padding-top: 33px;
     padding-bottom: 39px;
     border-bottom-color: #f2f2f2;
+    scroll-margin-top: calc( 71px - 5px );
   }
 }
 
@@ -1073,7 +1204,7 @@ img {
   padding: 59px 0 58px 0;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
-  scroll-margin-top: calc( calc(2em + 1.5625rem + 2em + 6px) - 5px );
+  scroll-margin-top: calc( 95px - 5px );
 }
 @media (max-width: calc(1020px - 1px)) {
   .quote {
@@ -1092,6 +1223,7 @@ img {
     padding-top: 44px;
     padding-bottom: 36px;
     border-bottom-color: #f06c64;
+    scroll-margin-top: calc( 71px - 5px );
   }
 }
 
