--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -20,8 +20,9 @@
   padding: 2em 2.5em;
   max-width: 50vw;
   border-radius: 5px;
-  border: 1px solid $color-quote-text;
-  background-color: $color-quote-background;
+  border: 2px solid $color-services-title;
+  background-color: $color-services-background;
+
   
   @include media-laptop {
     max-width: 60vw;
@@ -43,7 +44,7 @@
 .message__title {
   padding-right: 1em;
   margin-bottom: 1.5em;
-  color: $color-quote-title;
+  color: $color-services-title;
   text-transform: uppercase;
   word-spacing: 0.5em;
 }
@@ -51,7 +52,7 @@
 .message__text {
   padding-right: 1em;
   @include font ($size: 1.125rem, $height: 1.4, $weight: 400);
-  color: $color-quote-text;
+  color: $color-services-text;
   word-wrap: break-word;
   cursor: auto;
 
@@ -67,7 +68,7 @@
   
   &--limit-height::-webkit-scrollbar-thumb {
     border-radius: 4px;
-    background-color: $color-quote-title;
+    background-color: $color-services-text;
   }
   
   &--limit-height::-webkit-scrollbar-track {
@@ -88,21 +89,20 @@
   border: 1px solid transparent;
   background-color: $color-outline;
   @include font ($size: 0.875rem, $height: 1, $weight: 700);
-  color: #886A30;
+  color: $color-services-title;
   text-transform: uppercase;
   overflow: hidden;
   @extend %transition-bgColor-color-400-linear;
   cursor: pointer;
 
   &:active {
-    border-color: $color-quote-text;
-    @extend %transition-borderColor-150-linear;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8);
     outline: none;
   }
 
   @include media-hover {
     &:hover {
-      color: $color-quote-text;
+      color: $color-services-background;
       background-color: $color-footer-background;
       outline: none;
     }
