--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -69,6 +69,7 @@
   padding-bottom: 1.6em;
   width: 100%;
   max-height: 17em;
+  word-wrap: break-word;
   overflow-y: scroll;
   resize: none;
   cursor: auto;
