--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -20,7 +20,7 @@
   padding: 2em 2.5em;
   max-width: 50vw;
   border-radius: 5px;
-  border: 2px solid $color-services-title;
+  border: 2px solid $color-footer-background;
   background-color: $color-services-background;
 
   
@@ -44,7 +44,7 @@
 .message__title {
   padding-right: 1em;
   margin-bottom: 1.5em;
-  color: $color-services-title;
+  color: $color-footer-background;
   text-transform: uppercase;
   word-spacing: 0.5em;
 }
@@ -52,7 +52,7 @@
 .message__text {
   padding-right: 1em;
   @include font ($size: 1.125rem, $height: 1.4, $weight: 400);
-  color: $color-services-text;
+  color: $color-footer-background;
   word-wrap: break-word;
   cursor: auto;
 
@@ -68,7 +68,7 @@
   
   &--limit-height::-webkit-scrollbar-thumb {
     border-radius: 4px;
-    background-color: $color-services-text;
+    background-color: $color-footer-background;
   }
   
   &--limit-height::-webkit-scrollbar-track {
@@ -89,7 +89,7 @@
   border: 1px solid transparent;
   background-color: $color-outline;
   @include font ($size: 0.875rem, $height: 1, $weight: 700);
-  color: $color-services-title;
+  color: $color-footer-background;
   text-transform: uppercase;
   overflow: hidden;
   @extend %transition-bgColor-color-400-linear;
