fix: change sticky to fix position for header

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,7 +1,9 @@
 
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   padding: 2em 0 2em 0;
   background-color: $color-header-background;
   border-bottom: 6px solid $color-header-border;
