--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,10 +6,15 @@ html {
 
 body {
   margin: 0;
+  margin-top: $header-height;
   padding: 0;
   box-sizing: border-box;
   @extend %font-main;
   color: $color-light;
+
+  @include media-mobile-landscape {
+    margin-top: $header-height-mobile;
+  }
 }
 
 *,
