--- a/style.css
+++ b/style.css
@@ -42,9 +42,15 @@ html {
 
 body {
   margin: 0;
+  margin-top: 95px;
   padding: 0;
   box-sizing: border-box;
   color: #ffffff;
+}
+@media (max-width: calc(640px - 1px)) {
+  body {
+    margin-top: 71px;
+  }
 }
 
 *,
@@ -240,8 +246,10 @@ img {
 }
 
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   padding: 2em 0 2em 0;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
