--- a/style.css
+++ b/style.css
@@ -1526,7 +1526,7 @@ img {
 }
 
 .modal__message {
-  padding: 2em 2.5em;
+  padding: 1.5em 2em;
   max-width: 50vw;
   border-radius: 5px;
   border: 2px solid #2d303a;
@@ -1555,10 +1555,11 @@ img {
 
 .message__title {
   padding-right: 1em;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
   color: #2d303a;
   text-transform: uppercase;
-  word-spacing: 0.5em;
+  word-spacing: 0.4em;
+  white-space: normal;
 }
 
 .message__text {
@@ -1573,28 +1574,28 @@ img {
 }
 .message__text--limit-height {
   max-height: 30vh;
-  padding-right: calc(1em - 8px);
+  padding-right: calc(1em - 6px);
   overflow-y: scroll;
 }
 .message__text--limit-height::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
 }
 .message__text--limit-height::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: #2d303a;
+  border-radius: 3px;
+  background-color: #f06c64;
 }
 .message__text--limit-height::-webkit-scrollbar-track {
   background-color: inherit;
 }
 
 .message__text + .message__text {
-  margin-top: 1.3em;
+  margin-top: 1em;
 }
 
 .message__btn {
   float: right;
-  margin-top: 3em;
-  margin-right: 1.2857em;
+  margin-top: 1.5em;
+  margin-right: 1.1428em;
   padding: 0.75em 2.5em;
   border-radius: 5px;
   border: 1px solid transparent;
