fix: change js in form-modal

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
+  width: 100vw;
   padding: 2em 0 2em 0;
   background-color: $color-header-background;
   border-bottom: 6px solid $color-header-border;
