--- a/style.css
+++ b/style.css
@@ -873,12 +873,18 @@ img {
 
 .feature-tile__text {
   max-height: 5.5em;
+  min-height: calc(0.75rem * 1.84 * 2 + 1px);
   margin-top: 0.75em;
   font-size: 0.75rem;
   line-height: 1.84;
   font-weight: 400;
   font-style: normal;
   color: #767e9e;
+}
+@media (max-width: calc(640px - 1px)) {
+  .feature-tile__text {
+    max-height: none;
+  }
 }
 
 .portfolio {
@@ -1314,6 +1320,12 @@ img {
   font-style: normal;
   color: #f48c8f;
   overflow: hidden;
+  scroll-margin-top: calc( 95px + 5px );
+}
+@media (max-width: calc(640px - 1px)) {
+  .form__input {
+    scroll-margin-top: calc( 71px + 5px );
+  }
 }
 .form__input::-ms-input-placeholder {
   color: inherit;
